--- a/designer-furniture/frontend/src/css/global.css
+++ b/designer-furniture/frontend/src/css/global.css
@@ -30,7 +30,7 @@ html{
 body{
   margin: 0;
   padding: 0;
-  background: #F1F4FFFF;
+  background: #F2EDD7;
   font-family: var(--font-1);
   overflow-x: hidden;
 }
