--- a/designer-furniture/frontend/src/assets/css/SearchPage.css
+++ b/designer-furniture/frontend/src/assets/css/SearchPage.css
@@ -18,25 +18,23 @@
   
   /* ======= Product Grid ======= */
   .product-grid {
-    /* width: 600px; */
     display: flex;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-    /* margin: 0 auto; */
-    padding: 20px;
-  }
+    align-items: flex-start;
+}
   
   /* ======= Individual Product Card ======= */
   .product-card {
-    width: 300px;
+    width: 280px;
     background: white;
     padding: 15px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-  }
+}
   
   .product-card:hover {
     transform: translateY(-5px);
