--- a/designer-furniture/frontend/src/assets/css/ImageSlider.css
+++ b/designer-furniture/frontend/src/assets/css/ImageSlider.css
@@ -1,3 +1,4 @@
+/* Image Slider Container */
 .slider-container {
   width: 100%;
   height: calc(100vh - 70px);
@@ -5,9 +6,10 @@
   overflow: hidden;
 }
 
+/* Individual Slides */
 .slide {
   width: 100%;
-  height: calc(100vh - 70px);
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,9 +19,9 @@
 /* Slide Image */
 .slide-image {
   width: 100%;
-  height: calc(100vh - 70px);
-  object-fit: fill;
-  object-position: center center;
+  height: 100vh;
+  object-fit: cover;
+  transition: transform 0.8s ease-in-out;
 }
 
 /* Centered Text */
